fixed mobile whitespace

--- a/src/app/chats/chat/chat.component.scss
+++ b/src/app/chats/chat/chat.component.scss
@@ -7,11 +7,12 @@
 }
 .container {
   overflow-y: auto;
-  height: 100vh;
-  height: 100dvh;
+  scroll-behavior: smooth;
+  height: 100%;
 }
 .chat-container {
   max-width: 600px;
+  height: 100%;
   margin: auto;
   padding: 0 20px;
   position: relative;
