--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,10 @@
 html,
 body {
   margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
+  overflow-x: auto; // Fixes white bottom space on chrome mobile
   font-family: "Roboto", "Arial", sans-serif;
 }
 .header {
